# turtlecoin-v2

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  LICENSE  README.md
binaryinfo/: icon.rc
include/: ascii.h  cli_header.h  config.h  serializable.h  types.h
include/blockchain/: base_types.h  block.h  transaction_coinbase.h  transaction_genesis.h  transaction_normal.h  transaction_recall_stake.h  transaction_stake.h  transaction_stake_refund.h  transaction_staker_reward.h
include/network/: base_types.h  ip_address.h  packet_data.h  packet_handshake.h  packet_keepalive.h  packet_peer_exchange.h  zmq_message_envelope.h
include/staking/: candidate.h  stake.h  staker.h
include/tools/: cli_helper.h  signal_handler.h  thread_helper.h  thread_safe_deque.h  thread_safe_map.h  thread_safe_priority_queue.h  thread_safe_queue.h  thread_safe_set.h
scripts/: format.js
src/: CMakeLists.txt
src/common/: CMakeLists.txt  address.cpp  address.h  common.cpp  common.h  network_fees.cpp  network_fees.h
src/core/: CMakeLists.txt  blockchain_storage.cpp  blockchain_storage.h  core.cpp  core.h  staking_engine.cpp  staking_engine.h
src/database/: CMakeLists.txt  db_lmdb.cpp  db_lmdb.h
src/errors/: CMakeLists.txt  errors.cpp  errors.h
src/http/: CMakeLists.txt  http.cpp  http.h
src/logger/: CMakeLists.txt  logger.cpp  logger.h
src/networking/: CMakeLists.txt  http_client.cpp  http_client.h  http_server.cpp  http_server.h  http_shared.h  upnp.cpp  upnp.h  zmq_client.cpp  zmq_client.h  zmq_publisher.cpp  zmq_publisher.h  zmq_server.cpp  zmq_server.h  zmq_shared.cpp  zmq_shared.h  zmq_subscriber.cpp  zmq_subscriber.h
src/node/: CMakeLists.txt  node.cpp  node.h
src/p2p/: CMakeLists.txt  network_node.cpp  network_node.h  p2p_node.cpp  p2p_node.h  peer_database.cpp  peer_database.h
src/seed_node/: CMakeLists.txt  node.cpp
src/tests/: CMakeLists.txt  address.cpp  http.cpp  p2p.cpp  structures.cpp  test.cpp  txn_pow.cpp  zmq_client.cpp  zmq_publisher.cpp  zmq_server.cpp  zmq_subscriber.cpp
src/utilities/: CMakeLists.txt  address_encoding.cpp  address_encoding.h  cli_helper.cpp  cli_helper.h  colors.cpp  colors.h  console.cpp  console.h  utilities.cpp  utilities.h
src/walletbackend/: README.md
