add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(database)
add_subdirectory(errors)
add_subdirectory(http)
add_subdirectory(logger)
add_subdirectory(networking)
add_subdirectory(node)
add_subdirectory(p2p)
add_subdirectory(utilities)

if(BUILD_UNIT_TESTS)
    add_subdirectory(tests)
endif()
